--- a/src/pages/List/CardSlider.module.scss
+++ b/src/pages/List/CardSlider.module.scss
@@ -2,59 +2,64 @@
   position: relative;
   display: flex;
   align-items: center;
-
   width: 100%;
-  max-width: rem(1130px);
-  margin-top: $size-md;
-  margin-bottom: rem(50px);
-
+  margin-bottom: rem(40px);
   overflow: visible;
 }
 
 .sliderOuter {
-  flex: 1;
-  overflow-x: auto;
+  overflow-x: hidden;
   overflow-y: visible;
-
-  padding: $size-sm $size-lg;
-  scroll-padding: 0 $size-lg;
-}
-
-.slider {
-  display: flex;
-  gap: rem(20px);
-  padding-bottom: rem(30px);
-
-  scroll-behavior: smooth;
-  max-width: 100%;
-  overflow: visible;
-
-  -ms-overflow-style: none;
-  scrollbar-width: none;
 
   // 스크롤바 숨김
   &::-webkit-scrollbar {
     display: none;
   }
 
-  & > * {
-    flex-shrink: 0;
-    width: rem(260px);
+  @include tablet {
+    padding: 0 rem(24px);
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    touch-action: pan-x;
+    -ms-overflow-style: none;
+  }
+
+  @include mobile {
+    padding: 0 rem(24px);
+    overflow-x: auto;
+  }
+}
+
+.sliderHoverWrapper {
+  overflow: visible;
+  padding-bottom: rem(10px);
+}
+
+.slider {
+  display: flex;
+  gap: rem(20px);
+
+  @include tablet {
+    width: max-content;
+  }
+
+  @include mobile {
+    width: max-content;
   }
 }
 
 .buttonLeft {
   position: absolute;
   top: 50%;
-  left: rem(-20px);
-  transform: translateY(-100%);
-  z-index: 10;
+  left: rem(-16px);
+  transform: translateY(-50%);
+  z-index: 50;
 }
 
 .buttonRight {
   position: absolute;
   top: 50%;
-  right: rem(-20px);
-  transform: translateY(-100%);
-  z-index: 10;
+  right: rem(-16px);
+  transform: translateY(-50%);
+  z-index: 50;
 }
