--- a/src/pages/List/ListPage.module.scss
+++ b/src/pages/List/ListPage.module.scss
@@ -1,11 +1,18 @@
 .wrapper {
-  max-width: rem(1200px);
-  margin: 0 auto;
-  padding: rem(50px);
-
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  margin: 0 auto;
+  padding: 50px 0;
   overflow: visible;
+}
+
+.buttonField {
+  display: flex;
+  width: 280px;
+  height: 56px;
+  margin: 0 auto;
+  border-radius: 12px;
+  font-weight: 700;
+  text-align: center;
 }
