--- a/src/pages/List/SectionTitle.module.scss
+++ b/src/pages/List/SectionTitle.module.scss
@@ -1,6 +1,5 @@
 .title {
-  margin-left: rem(380px);
-
+  margin-bottom: rem(5px);
   font-size: $font-2xl;
   font-weight: 700;
   font-family: $font-family-primary;
