--- a/src/pages/message/MessageForm.module.scss
+++ b/src/pages/message/MessageForm.module.scss
@@ -7,10 +7,10 @@
 .buttonGroup {
   display: flex;
   justify-content: center;
-  gap: 20px;
-  margin-top: 24px;
+  gap: rem(20px);
+  margin-top: rem(24px);
 
   button {
-    width: 300px;
+    width: rem(300px);
   }
 }
