feat: 카드 목록 반응형 레이아웃 구현 (모달 제외)

--- a/src/pages/PostDetail/CardDetail.module.scss
+++ b/src/pages/PostDetail/CardDetail.module.scss
@@ -45,6 +45,13 @@
 
 .cardContent {
   @include cardContent(rem(336px), rem(106px));
+
+  @media (max-width: 1247px) {
+    @include cardContent(rem(304px), rem(110px));
+  }
+  @media (max-width: 767px) {
+    @include cardContent(rem(272px), rem(56px));
+  }
 }
 
 .cardDate {
