feat: 모달 레이아웃 반응형 대응 추가

--- a/src/pages/PostDetail/PostCardList.module.scss
+++ b/src/pages/PostDetail/PostCardList.module.scss
@@ -43,6 +43,8 @@
     width: 100%;
     grid-template-columns: repeat(1, 1fr);
     margin: 0 auto;
+    padding-left: rem(16px);
+    padding-right: rem(16px);
   }
 }
 
