--- a/src/pages/PostDetail/CardDetail.module.scss
+++ b/src/pages/PostDetail/CardDetail.module.scss
@@ -4,7 +4,7 @@
   @include flex-center;
   width: 100%;
   height: rem(280px);
-  background-color: $white;
+  background-color: var(--color-default-background);
   border-radius: $radius-lg;
 }
 
@@ -13,7 +13,7 @@
   position: relative;
   width: 100%;
   height: rem(280px);
-  background-color: $white;
+  background-color: var(--color-default-background);
   border-radius: $radius-lg;
   padding: rem(28px) rem(24px) rem(24px);
   cursor: pointer;
