feat: postDetail 페이지 다크모드 작업

--- a/src/pages/PostDetail/CardDetailShared.module.scss
+++ b/src/pages/PostDetail/CardDetailShared.module.scss
@@ -1,7 +1,8 @@
 @use '@/styles/common' as common;
 
 @mixin column {
-  display: column;
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
