--- a/src/pages/PostEdit/DeleteModal.module.scss
+++ b/src/pages/PostEdit/DeleteModal.module.scss
@@ -3,10 +3,13 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-
-  > svg {
+  background-color: var(--color-default-background);
+  & > svg {
     width: rem(110px);
     height: rem(110px);
+    path {
+      fill: var(--color-light-gray-text);
+    }
   }
 }
 .yesDelete {
