--- a/src/pages/List/SectionTitle.module.scss
+++ b/src/pages/List/SectionTitle.module.scss
@@ -3,5 +3,5 @@
   font-size: $font-2xl;
   font-weight: 700;
   font-family: $font-family-primary;
-  color: $black;
+  color: var(--color-default-text);
 }
