--- a/src/pages/Message/ContentEditor.module.scss
+++ b/src/pages/Message/ContentEditor.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   font-family: $font-family-primary;
+  color: $black;
 }
 
 .label {
@@ -9,7 +10,7 @@
   font-size: $font-2xl;
   font-weight: 700;
   font-family: $font-family-primary;
-  color: $gray900;
+  color: var(--color-gray-text);
 }
 
 .wrapper {
