fix: list 및 message 페이지 버그 수정 및 코드 리팩토링

--- a/src/pages/List/CardItem.module.scss
+++ b/src/pages/List/CardItem.module.scss
@@ -1,13 +1,11 @@
 .card {
   width: rem(275px);
   height: rem(260px);
-  z-index: 1;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: $size-md;
-  background-color: $white;
   transform-origin: top left;
   transition:
     transform 0.2s ease,
@@ -43,7 +41,7 @@
   display: flex;
   align-items: center;
 
-  & > * {
+  .avatar {
     width: rem(28px);
     height: rem(28px);
     margin-left: rem(-12px);
@@ -58,6 +56,7 @@
 }
 
 .extra {
+  position: relative;
   width: rem(33px);
   height: rem(28px);
   margin-left: rem(-12px);
@@ -69,6 +68,7 @@
   align-items: center;
   justify-content: center;
   border-radius: rem(30px);
+  z-index: 999;
 }
 
 .count {
@@ -110,4 +110,17 @@
   justify-content: center;
   align-items: center;
   border-radius: rem(32px);
+}
+
+.beige {
+  background-color: $beige200;
+}
+.purple {
+  background-color: $purple200;
+}
+.blue {
+  background-color: $blue200;
+}
+.green {
+  background-color: $green200;
 }
