fix: 카드 박스 정렬 및 마진 레이아웃 수정

--- a/src/layouts/Layout.module.scss
+++ b/src/layouts/Layout.module.scss
@@ -2,12 +2,12 @@
   font-family: $font-family-primary;
 }
 .container {
-  margin: $size-md auto;
+  margin: 0 auto;
   position: relative;
   font-family: $font-family-primary;
 }
 @include mobile {
   .container {
-    margin: $size-md auto;
+    margin: 0 auto;
   }
 }
