fix: 토스트 중앙배열

--- a/src/components/PostNav/index.module.scss
+++ b/src/components/PostNav/index.module.scss
@@ -40,8 +40,9 @@
   @include flex-center;
 
   @include mobile {
+    justify-content: flex-end;
     height: rem(52px);
-    height: rem(52px);
+    padding: 0 rem(20px);
   }
 }
 .authorCountSkeleton {
