--- a/src/pages/PostEdit/DeleteButton.module.scss
+++ b/src/pages/PostEdit/DeleteButton.module.scss
@@ -23,6 +23,7 @@
 
 .btnPostDelete {
   position: absolute;
+  background-color: #fff;
   width: rem(40px);
   height: rem(40px);
   border: 1px solid $gray300;
