--- a/src/pages/PostEdit/MessageEdit.module.scss
+++ b/src/pages/PostEdit/MessageEdit.module.scss
@@ -1,7 +1,9 @@
 .modalContent {
   background-color: $white;
-  width: 52rem;
-  height: 56rem;
+  max-width: 52rem;
+  max-height: 56rem;
+  width: 100%;
+  height: 100%;
   padding: 2rem;
   overflow-y: scroll;
   border: rem(4px) solid $gray300;
