fix: layout margin 수정, CardItem profile image 클래스 적용

--- a/src/pages/List/CardItem.module.scss
+++ b/src/pages/List/CardItem.module.scss
@@ -50,8 +50,7 @@
 .participants {
   display: flex;
   align-items: center;
-
-  .avatar {
+  & > div {
     width: rem(28px);
     height: rem(28px);
     margin-left: rem(-12px);
