--- a/src/layouts/Layout.module.scss
+++ b/src/layouts/Layout.module.scss
@@ -2,12 +2,11 @@
   font-family: $font-family-primary;
 }
 .container {
-  margin: $size-md auto;
   position: relative;
   font-family: $font-family-primary;
+  padding: $size-lg $size-lg;
 }
-@include mobile {
-  .container {
-    margin: $size-md auto;
-  }
+.container-post {
+  position: relative;
+  font-family: $font-family-primary;
 }
