--- a/src/pages/message/MessagePage.module.scss
+++ b/src/pages/message/MessagePage.module.scss
@@ -1,5 +1,16 @@
 .wrapper {
-  max-width: rem(720px);
   margin: 0 auto;
   padding-top: rem(47px);
+
+  @include tablet {
+    padding-top: rem(49px);
+    padding: 0 rem(16px);
+    box-sizing: border-box;
+  }
+
+  @include mobile {
+    padding-top: rem(50px);
+    padding: 0 rem(16px);
+    box-sizing: border-box;
+  }
 }
