--- a/src/pages/message/ProfileUploader.module.scss
+++ b/src/pages/message/ProfileUploader.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   max-width: rem(720px);
+  width: 100%;
   gap: rem(12px);
 }
 
@@ -38,11 +39,17 @@
 .thumbnailRow {
   display: flex;
   gap: rem(5px);
+  width: 100%;
+  max-width: rem(605px);
   margin-top: rem(12px);
+
+  @include mobile {
+    flex-wrap: wrap;
+  }
 }
 
 .thumbnail {
-  width: rem(56px);
+  max-width: rem(56px);
   height: rem(56px);
   border-radius: 100px;
   overflow: hidden;
@@ -61,7 +68,7 @@
   }
 }
 
-.rightBow {
+.rightBox {
   display: flex;
   flex-direction: column;
   gap: rem(12px);
