--- a/src/pages/List/CardSliderSection.module.scss
+++ b/src/pages/List/CardSliderSection.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
+  width: 100%;
   max-width: rem(1165px);
   box-sizing: border-box;
   gap: $size-md;
