fix: 메시지 수정했을 때 이미지 변경

--- a/src/components/PostNav/EmojiAddButton.module.scss
+++ b/src/components/PostNav/EmojiAddButton.module.scss
@@ -32,5 +32,9 @@
   position: absolute;
   top: rem(50px);
   right: rem(25px);
-  z-index: 50;
+  z-index: 20;
+
+  @include mobile {
+    right: 0;
+  }
 }
