feat: layout padding 수정

--- a/src/layouts/Layout.module.scss
+++ b/src/layouts/Layout.module.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
   position: relative;
   font-family: $font-family-primary;
-  padding: $size-lg $size-lg;
+  padding: $size-lg 0;
 }
 .container-post {
   position: relative;
