--- a/src/pages/PostDetail/CardDetailShared.module.scss
+++ b/src/pages/PostDetail/CardDetailShared.module.scss
@@ -80,4 +80,11 @@
   font-size: common.$font-xs;
   font-weight: 400;
   color: common.$gray400;
+  transition:
+    transform 0.3s ease,
+    opacity 0.3s ease;
+  .cardBox:hover & {
+    transform: translateY(-5px);
+    opacity: 1;
+  }
 }
